--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "devDependencies": {
     "@rsbuild/core": "^1.6.1",
     "@rsbuild/plugin-react": "^1.4.1",
+    "@rsbuild/plugin-type-check": "^1.3.0",
     "@types/react": "^19.2.2",
     "@types/react-dom": "^19.2.2",
     "typescript": "^5.9.3"
