--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,4 @@
 ZERO_UPSTREAM_DB="postgresql://user:password@127.0.0.1/postgres"
 ZERO_REPLICA_FILE="/tmp/sync-replica.db"
-ZERO_SERVER="http://localhost:4848"
+PUBLIC_ZERO_SERVER="http://localhost:4848"
+PUBLIC_CLERK_PUBLISHABLE_KEY="your_publishable_key_here"
