--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "typescript": "^5.9.3"
   },
   "dependencies": {
+    "@clerk/clerk-react": "^5.53.4",
     "@rocicorp/zero": "^0.24.2025101500",
     "react": "^19.2.0",
     "react-aria-components": "^1.13.0",
