--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@rocicorp/zero": "^0.24.2025101500",
     "react": "^19.2.0",
     "react-aria-components": "^1.13.0",
-    "react-dom": "^19.2.0"
+    "react-dom": "^19.2.0",
+    "react-icons": "^5.5.0"
   }
 }
