--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react": "^19.2.0",
     "react-aria-components": "^1.13.0",
     "react-dom": "^19.2.0",
-    "react-icons": "^5.5.0"
+    "react-icons": "^5.5.0",
+    "wouter": "^3.7.1"
   }
 }
