--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "rsbuild dev",
     "build": "rsbuild build",
     "preview": "rsbuild preview",
-    "zero-cache": "npx zero-cache-dev"
+    "zero-cache": "npx zero-cache-dev --schema-path schema.js"
   },
   "keywords": [],
   "author": "",
@@ -16,6 +16,7 @@
     "@rsbuild/core": "^1.6.1",
     "@rsbuild/plugin-react": "^1.4.1",
     "@rsbuild/plugin-type-check": "^1.3.0",
+    "@types/qrcode": "^1.5.6",
     "@types/react": "^19.2.2",
     "@types/react-dom": "^19.2.2",
     "typescript": "^5.9.3"
@@ -23,6 +24,7 @@
   "dependencies": {
     "@clerk/clerk-react": "^5.53.4",
     "@rocicorp/zero": "^0.24.2025101500",
+    "qrcode": "^1.5.4",
     "react": "^19.2.0",
     "react-aria-components": "^1.13.0",
     "react-dom": "^19.2.0",
