--- a/package.json
+++ b/package.json
@@ -5,9 +5,10 @@
   "type": "module",
   "scripts": {
     "dev": "rsbuild dev",
+    "api": "node server.js",
     "build": "rsbuild build",
     "preview": "rsbuild preview",
-    "zero-cache": "npx zero-cache-dev --schema-path schema.js"
+    "migrate": "for file in migrations/*.sql; do echo \"Running $file...\"; docker exec -i grape-tracker-db psql -U postgres < \"$file\"; done"
   },
   "keywords": [],
   "author": "",
@@ -23,7 +24,10 @@
   },
   "dependencies": {
     "@clerk/clerk-react": "^5.53.4",
-    "@rocicorp/zero": "^0.24.2025101500",
+    "@electric-sql/react": "^0.5.3",
+    "cors": "^2.8.5",
+    "express": "^4.21.2",
+    "pg": "^8.13.1",
     "qrcode": "^1.5.4",
     "react": "^19.2.0",
     "react-aria-components": "^1.13.0",
