--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "dependencies": {
     "@clerk/clerk-react": "^5.53.4",
     "@rocicorp/zero": "^0.24.2025101500",
+    "jszip": "^3.10.1",
     "qrcode": "^1.5.4",
     "react": "^19.2.0",
     "react-aria-components": "^1.13.0",
