--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "react-aria-components": "^1.13.0",
     "react-dom": "^19.2.0",
     "react-icons": "^5.5.0",
+    "three": "^0.181.0",
+    "three-stdlib": "^2.36.0",
     "wouter": "^3.7.1"
   }
 }
