--- a/package.json
+++ b/package.json
@@ -19,10 +19,14 @@
     "@types/qrcode": "^1.5.6",
     "@types/react": "^19.2.2",
     "@types/react-dom": "^19.2.2",
+    "@types/three": "^0.181.0",
     "typescript": "^5.9.3"
   },
   "dependencies": {
     "@clerk/clerk-react": "^5.53.4",
+    "@jscad/3mf-serializer": "^2.1.15",
+    "@jscad/modeling": "^2.12.6",
+    "@jscad/stl-serializer": "^2.1.21",
     "@rocicorp/zero": "^0.24.2025101500",
     "jszip": "^3.10.1",
     "qrcode": "^1.5.4",
@@ -31,6 +35,7 @@
     "react-dom": "^19.2.0",
     "react-icons": "^5.5.0",
     "three": "^0.181.0",
+    "three-mesh-bvh": "^0.9.2",
     "three-stdlib": "^2.36.0",
     "wouter": "^3.7.1"
   }
