--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "rsbuild dev",
     "build": "rsbuild build",
     "preview": "rsbuild preview",
-    "zero-cache": "npx zero-cache-dev --schema-path schema.js"
+    "zero-cache": "npx zero-cache-dev --schema-path schema.js",
+    "zero-cache:dev": "npx zero-cache-dev --schema-path schema.js"
   },
   "keywords": [],
   "author": "",
@@ -28,6 +29,7 @@
     "@jscad/modeling": "^2.12.6",
     "@jscad/stl-serializer": "^2.1.21",
     "@rocicorp/zero": "^0.24.2025101500",
+    "express": "^5.1.0",
     "jszip": "^3.10.1",
     "qrcode": "^1.5.4",
     "react": "^19.2.0",
