--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react-aria-components": "^1.13.0",
     "react-dom": "^19.2.0",
     "react-icons": "^5.5.0",
+    "react-qr-reader": "^3.0.0-beta-1",
     "three": "^0.181.0",
     "three-mesh-bvh": "^0.9.2",
     "three-stdlib": "^2.36.0",
