--- a/package.json
+++ b/package.json
@@ -35,13 +35,13 @@
     "@jscad/stl-serializer": "^2.1.21",
     "@rocicorp/zero": "^0.24.2025101500",
     "express": "^5.1.0",
+    "html5-qrcode": "^2.3.8",
     "jszip": "^3.10.1",
     "qrcode": "^1.5.4",
     "react": "^19.2.0",
     "react-aria-components": "^1.13.0",
     "react-dom": "^19.2.0",
     "react-icons": "^5.5.0",
-    "react-qr-reader": "^3.0.0-beta-1",
     "three": "^0.181.0",
     "three-mesh-bvh": "^0.9.2",
     "three-stdlib": "^2.36.0",
