--- a/package.json
+++ b/package.json
@@ -35,8 +35,8 @@
     "@jscad/stl-serializer": "^2.1.21",
     "@rocicorp/zero": "^0.24.2025101500",
     "express": "^5.1.0",
-    "html5-qrcode": "^2.3.8",
     "jszip": "^3.10.1",
+    "qr-scanner": "^1.4.2",
     "qrcode": "^1.5.4",
     "react": "^19.2.0",
     "react-aria-components": "^1.13.0",
