--- a/package.json
+++ b/package.json
@@ -12,20 +12,28 @@
     "preview": "rsbuild preview",
     "zero-cache": "npx zero-cache-dev --schema-path schema.js",
     "backend": "cd backend && cargo run",
-    "backend:watch": "cd backend && cargo watch -x run"
+    "backend:watch": "cd backend && cargo watch -x run",
+    "test": "rstest",
+    "test:watch": "rstest --watch",
+    "test:coverage": "rstest --coverage"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "@rsbuild/core": "^1.6.1",
-    "@rsbuild/plugin-react": "^1.4.1",
+    "@rsbuild/plugin-react": "^1.4.2",
     "@rsbuild/plugin-type-check": "^1.3.0",
+    "@rstest/core": "^0.6.5",
+    "@testing-library/dom": "^10.4.1",
+    "@testing-library/jest-dom": "^6.9.1",
+    "@testing-library/react": "^16.3.0",
     "@types/qrcode": "^1.5.6",
     "@types/react": "^19.2.2",
     "@types/react-dom": "^19.2.2",
     "@types/three": "^0.181.0",
     "concurrently": "^9.2.1",
+    "jsdom": "^27.2.0",
     "typescript": "^5.9.3"
   },
   "dependencies": {
