mark tests as todo

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,5 +17,6 @@
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true
   },
-  "include": ["src", "rstest.d.ts"]
+  "include": ["src"],
+  "exclude": ["**/*.test.ts", "**/*.test.tsx", "**/__mocks__/**"]
 }
