add vintage modal

--- a/package.json
+++ b/package.json
@@ -7,10 +7,10 @@
     "dev": "concurrently -n \"zero,backend,frontend\" -c \"cyan,magenta,green\" \"yarn dev:zero\" \"yarn dev:backend\" \"yarn dev:frontend\"",
     "dev:frontend": "rsbuild dev",
     "dev:backend": "cd backend && cargo run",
-    "dev:zero": "npx zero-cache-dev --schema-path schema.js",
+    "dev:zero": "npx zero-cache-dev --schema-path schema.cjs",
     "build": "rsbuild build",
     "preview": "rsbuild preview",
-    "zero-cache": "npx zero-cache-dev --schema-path schema.js",
+    "zero-cache": "npx zero-cache-dev --schema-path schema.cjs",
     "backend": "cd backend && cargo run",
     "backend:watch": "cd backend && cargo watch -x run",
     "test": "rstest",
