--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@rsbuild/plugin-react": "^1.4.2",
     "@rsbuild/plugin-type-check": "^1.3.0",
     "@rstest/core": "^0.6.5",
+    "@rstest/coverage-istanbul": "^0.0.5",
     "@testing-library/dom": "^10.4.1",
     "@testing-library/jest-dom": "^6.9.1",
     "@testing-library/react": "^16.3.0",
