--- a/backend/railway.toml
+++ b/backend/railway.toml
@@ -1,3 +1,6 @@
+[build]
+watchPaths = ["backend/**", "../schema.cjs", "../migrations/**"]
+
 [deploy]
 restartPolicyType = "ON_FAILURE"
 restartPolicyMaxRetries = 10
