plan for zero-oxide

--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -16,6 +16,8 @@ chrono = "0.4"
 tracing = "0.1"
 tracing-subscriber = { version = "0.3", features = ["env-filter"] }
 dotenvy = "0.15"
+jsonwebtoken = "9"
+base64 = "0.22"
 
 [profile.release]
 opt-level = 3
