--- a/queries-service/package.json
+++ b/queries-service/package.json
@@ -5,6 +5,7 @@
     "dev": "tsx watch src/index.ts"
   },
   "dependencies": {
+    "@hono/node-server": "^1.13.0",
     "@rocicorp/zero": "^0.24.2025101500",
     "hono": "^4.0.0",
     "zod": "^3.23.0"
