--- a/queries-service/package.json
+++ b/queries-service/package.json
@@ -2,7 +2,9 @@
   "name": "queries-service",
   "type": "module",
   "scripts": {
-    "dev": "tsx watch src/index.ts"
+    "dev": "tsx watch src/index.ts",
+    "start": "tsx src/index.ts",
+    "sync-schema": "cp ../schema.ts ./schema.ts"
   },
   "dependencies": {
     "@hono/node-server": "^1.13.0",
