--- a/queries-service/tsconfig.json
+++ b/queries-service/tsconfig.json
@@ -7,7 +7,7 @@
     "resolveJsonModule": true,
     "allowJs": true,
     "outDir": "./dist",
-    "rootDir": "./src",
+    "rootDir": ".",
     "strict": true,
     "esModuleInterop": true,
     "skipLibCheck": true,
@@ -16,6 +16,6 @@
     "declarationMap": true,
     "sourceMap": true
   },
-  "include": ["src/**/*"],
+  "include": ["src/**/*", "schema.ts"],
   "exclude": ["node_modules", "dist", "test-outputs"]
 }
