--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,5 @@
 ZERO_UPSTREAM_DB="postgresql://user:password@127.0.0.1/postgres"
 ZERO_REPLICA_FILE="/tmp/sync-replica.db"
+ZERO_MUTATE_URL="http://localhost:3002/push"
 PUBLIC_ZERO_SERVER="http://localhost:4848"
 PUBLIC_CLERK_PUBLISHABLE_KEY="your_publishable_key_here"
