--- a/queries-service/package.json
+++ b/queries-service/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "@hono/node-server": "^1.13.0",
     "@rocicorp/zero": "^0.24.2025101500",
+    "dotenv": "^17.2.3",
     "hono": "^4.0.0",
     "zod": "^3.23.0"
   },
