--- a/queries-service/package.json
+++ b/queries-service/package.json
@@ -3,7 +3,7 @@
   "type": "module",
   "scripts": {
     "dev": "yarn sync-schema && tsx watch src/index.ts",
-    "start": "yarn sync-schema && tsx src/index.ts",
+    "start": "tsx src/index.ts",
     "sync-schema": "cp ../schema.ts ./schema.ts",
     "test": "npx vitest run",
     "test:watch": "npx vitest"
