--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "test": "rstest",
     "test:watch": "rstest --watch",
     "test:coverage": "rstest --coverage",
-    "some-shit": "yarn test"
+    "some-shit": "yarn test",
+    "embed-docs": "npx tsx scripts/embed-docs.ts"
   },
   "keywords": [],
   "author": "",
@@ -36,10 +37,12 @@
     "@types/react": "^19.2.2",
     "@types/react-dom": "^19.2.2",
     "@types/three": "^0.181.0",
+    "@types/pg": "^8.11.10",
     "concurrently": "^9.2.1",
     "jsdom": "^27.2.0",
     "typescript": "^5.9.3",
-    "vitest": "^4.0.14"
+    "vitest": "^4.0.14",
+    "tsx": "^4.19.0"
   },
   "dependencies": {
     "@clerk/clerk-react": "^5.53.4",
@@ -59,6 +62,7 @@
     "three-mesh-bvh": "^0.9.2",
     "three-stdlib": "^2.36.0",
     "wouter": "^3.7.1",
-    "zod": "^4.1.13"
+    "zod": "^4.1.13",
+    "pg": "^8.13.1"
   }
 }
