--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -18,6 +18,7 @@ tracing-subscriber = { version = "0.3", features = ["env-filter"] }
 dotenvy = "0.15"
 jsonwebtoken = "9"
 base64 = "0.22"
+uuid = { version = "1", features = ["v4"] }
 
 [profile.release]
 opt-level = 3
