--- a/package.json
+++ b/package.json
@@ -15,14 +15,13 @@
     "start": "zero-cache --upstream-db $ZERO_UPSTREAM_DB --replica-file $ZERO_REPLICA_FILE --schema-path schema.cjs --auth-secret $ZERO_AUTH_SECRET --admin-password $ZERO_ADMIN_PASSWORD",
     "backend": "cd backend && cargo run",
     "backend:watch": "cd backend && cargo watch -x run",
-    "test": "rstest && yarn test:backend",
-    "test:frontend": "rstest",
-    "test:backend": "cd backend && cargo test",
-    "test:backend:watch": "cd backend && cargo watch -x test",
-    "test:frontend:watch": "rstest --watch",
-    "test:watch": "concurrently -n \"frontend,backend\" -c \"green,magenta\" \"yarn test:frontend:watch\" \"yarn test:backend:watch\"",
-    "test:coverage": "rstest --coverage",
-    "some-shit": "yarn test",
+    "test": "yarn test:fe",
+    "test:all": "yarn test:fe && yarn test:be",
+    "test:fe": "rstest",
+    "test:be": "cd backend && cargo test",
+    "test:fe:watch": "rstest --watch",
+    "test:be:watch": "cd backend && cargo watch -x test",
+    "test:fe:coverage": "rstest --coverage",
     "embed-docs": "npx tsx scripts/embed-docs.ts"
   },
   "keywords": [],
