--- a/package.json
+++ b/package.json
@@ -37,16 +37,16 @@
     "@testing-library/jest-dom": "^6.9.1",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^14.6.1",
+    "@types/pg": "^8.11.10",
     "@types/qrcode": "^1.5.6",
     "@types/react": "^19.2.2",
     "@types/react-dom": "^19.2.2",
     "@types/three": "^0.181.0",
-    "@types/pg": "^8.11.10",
     "concurrently": "^9.2.1",
     "jsdom": "^27.2.0",
+    "tsx": "^4.19.0",
     "typescript": "^5.9.3",
-    "vitest": "^4.0.14",
-    "tsx": "^4.19.0"
+    "vitest": "^4.0.14"
   },
   "dependencies": {
     "@clerk/clerk-react": "^5.53.4",
@@ -56,17 +56,18 @@
     "@rocicorp/zero": "^0.24.2025101500",
     "express": "^5.1.0",
     "jszip": "^3.10.1",
+    "pg": "^8.13.1",
     "qr-scanner": "^1.4.2",
     "qrcode": "^1.5.4",
     "react": "^19.2.0",
     "react-aria-components": "^1.13.0",
     "react-dom": "^19.2.0",
     "react-icons": "^5.5.0",
+    "recharts": "^3.5.1",
     "three": "^0.181.0",
     "three-mesh-bvh": "^0.9.2",
     "three-stdlib": "^2.36.0",
     "wouter": "^3.7.1",
-    "zod": "^4.1.13",
-    "pg": "^8.13.1"
+    "zod": "^4.1.13"
   }
 }
